# ectoolkit

./: .gitignore  LICENSE  README.md  pyproject.toml
src/ectoolkit/: individual.py  jssp.py  main.py  records.py
